samples/_failures_safe/1761127191_c486b7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8cc6f7df.c: In function ‘main’:
./samples/SAFE/__tmp_8cc6f7df.c:159:5: error: expected expression at end of input
  159 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_8cc6f7df.c:159:5: error: expected declaration or statement at end of input
